--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <strong>6. PERLENGKAPAN YANG HARUS DIBAWA</strong>
                         <ol type="a">
                             <li>Obat-obatan pribadi</li>
-                            <li>Alat salat</li><br>
+                            <li>Alat salat</li>
                         </ol>
                         
                         <strong>7. SYARAT DAN KETENTUAN BERLAKU</strong>
