--- a/index.html
+++ b/index.html
@@ -140,24 +140,19 @@
                         <strong>2. SOROTAN KEGIATAN</strong>
                         <ol type="a">
                             <li>
-                              <strong>Mengetahui makanan tradisional Desa Cigalontang</strong>
-                              Anda dapat mengetahui lebih lanjut tentang makanan tradisional Desa Cigalontang dan bagaimana cara membuatnya.
+                              Mengetahui makanan tradisional Desa Cigalontang
                             </li>
                             <li>
-                              <strong>Mengetahui tradisi dan budaya Desa Cigalontang</strong>
-                              Anda dapat mempelajari tentang tradisi dan budaya Desa Cigalontang yang unik dan khas.
+                              Mengetahui tradisi dan budaya Desa Cigalontang
                             </li>
                             <li>
-                              <strong>Mengetahui cara pembuatan wajit</strong>
-                              Anda dapat mengetahui cara pembuatan wajit secara langsung dari pengrajin yang berpengalaman.
+                              Mengetahui cara pembuatan wajit
                             </li>
                             <li>
-                              <strong>Mencicipi wajit secara langsung</strong>
-                              Anda dapat mencicipi wajit secara langsung dan merasakan kelezatan dan keunikan rasa wajit.
+                              Mencicipi wajit secara langsung
                             </li>
                             <li>
-                              <strong>Membawa pengalaman baru yang tidak ada di tempat lain</strong>
-                              Anda dapat membawa pengalaman baru dan unik yang tidak dapat ditemukan di tempat lain.
+                              Membawa pengalaman baru yang tidak ada di tempat lain
                             </li>
                           </ol>
                         
@@ -255,7 +250,7 @@
                         <strong>8. PERTANYAAN YANG SERING DIAJUKAN</strong><br>
                         <ol type="a">
                             <li><strong>Apakah paket ini cocok untuk perorangan?</strong><br>
-                            <strong>Jawaban: </strong>Paket ini dapat dilakukan oleh perorangan tetapi dengan harga yang di sesuaikan, apabila menginginkan pembiayaan yang sesuai dengan pembiayaan rombongan maka di ikut sertakan dengan peserta yang lain.<br><br>
+                            <strong>Jawaban: </strong>Paket ini dapat dilakukan oleh perorangan tetapi dengan harga yang di sesuaikan, apabila menginginkan pembiayaan yang sesuai dengan pembiayaan rombongan maka di ikut sertakan dengan peserta yang lain.<br>
                             </li>
                             <li><strong>Apakah paket wisata ini ramah untuk anak-anak dan keluarga? </strong><br>
                             <strong>Jawaban: </strong>Paket wisata ini cocok untuk anak-anak dan keluarga karena akan memberikan edukasi mengenai cara pembuatan wajit. Akan tetapi harus berada di dalam pengawasan.<br><br>
